--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 databricks-sql-connector>=2.0.1
-dbt-spark~=1.1.0
+dbt-spark@git+https://github.com/datawaves-xyz/dbt-spark@talkwithkeyboard/faster-caching
