--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 databricks-sql-connector>=2.0.1
 dbt-spark@git+https://github.com/datawaves-xyz/dbt-spark@talkwithkeyboard/faster-caching
+dbt-spark@git+https://github.com/dbt-labs/dbt-spark@jerco/wip-faster-caching-option2
