--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
 databricks-sql-connector>=2.0.1
-dbt-spark@git+https://github.com/datawaves-xyz/dbt-spark@talkwithkeyboard/faster-caching
-dbt-spark@git+https://github.com/dbt-labs/dbt-spark@jerco/wip-faster-caching-option2
+dbt-spark~=1.1.0
